--- a/Microservices/Kabali.Microservice/Kabali.Microservice.Identity/Properties/launchSettings.json
+++ b/Microservices/Kabali.Microservice/Kabali.Microservice.Identity/Properties/launchSettings.json
@@ -4,16 +4,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:49436",
-      "sslPort": 44356
+      "applicationUrl": "http://localhost:59247",
+      "sslPort": 44353
     }
   },
   "profiles": {
-    "Kabali.Microservice.Gateway": {
+    "Kabali.Microservice.Identity": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7159;http://localhost:5070",
+      "applicationUrl": "https://localhost:7289;http://localhost:5267",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
