added connecting string to appsettings.json

--- a/Apps/source/Platforms/Platforms.API/appsettings.json
+++ b/Apps/source/Platforms/Platforms.API/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "SystemIsLive": false
+  },
+  "ConnectionStrings": {
+    "TESTDB": "Server=(localdb)\\Kabali;Database=platformbackends;Integrated Security=True",
+    "PRODDB": "",
+    "PRPDB": ""
+  }
 }
