added some repository and extension

--- a/Apps/source/Platforms/Platforms.API/Platforms.API.csproj
+++ b/Apps/source/Platforms/Platforms.API/Platforms.API.csproj
@@ -21,4 +21,9 @@
   <ItemGroup>
     <None Remove="Newtonsoft.Json" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Platforms.Infrastructure\Platforms.Infrastructure.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
