added some method and class to login system

--- a/Apps/source/Platforms/Platforms.API/Platforms.API.csproj
+++ b/Apps/source/Platforms/Platforms.API/Platforms.API.csproj
@@ -20,10 +20,16 @@
 
   <ItemGroup>
     <None Remove="Newtonsoft.Json" />
+    <None Remove="Utils\" />
+    <None Remove="Controllers\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Platforms.Infrastructure\Platforms.Infrastructure.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Utils\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 </Project>
