--- a/Apps/source/Platforms/Platforms.Domain/Platforms.Domain.csproj
+++ b/Apps/source/Platforms/Platforms.Domain/Platforms.Domain.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="DTO\Account\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DTO\Account\" />
+  </ItemGroup>
 </Project>
